♻️ 코드 리팩토링 : 방 수정 추가 및 객체 생성하지 않고 return 하도록 수정